--- a/WhereToPlay/app/src/main/res/layout/fragment_integral.xml
+++ b/WhereToPlay/app/src/main/res/layout/fragment_integral.xml
@@ -10,7 +10,7 @@
         <com.fanc.wheretoplay.view.TopMenu
             android:id="@+id/tm_integral"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content" />
 
         <ImageView
             android:id="@+id/imageView2"
@@ -18,7 +18,7 @@
             android:layout_height="@dimen/height_50"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="@dimen/margin_30"
-            android:src="@drawable/integral"/>
+            android:src="@drawable/integral" />
 
         <TextView
             android:id="@+id/tv_integral_no"
@@ -28,28 +28,29 @@
             android:layout_marginTop="@dimen/margin_10"
             android:text="0"
             android:textColor="#333333"
-            android:textSize="@dimen/textsize_level2"/>
+            android:textSize="@dimen/textsize_level2" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_20"
-
             android:paddingBottom="@dimen/padding_5"
             android:paddingLeft="@dimen/padding_15"
             android:paddingTop="@dimen/padding_5"
             android:text="@string/integral_detail"
             android:textColor="#333333"
-            android:textSize="15sp"/>
+            android:textSize="15sp"
+            android:textStyle="bold" />
+
         <View
             android:layout_width="match_parent"
-            android:background="#ffdddddd"
-            android:layout_height="@dimen/line_height_1px"/>
+            android:layout_height="@dimen/line_height_1px"
+            android:background="#ffdddddd" />
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_integral"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent" />
 
     </LinearLayout>
 
