--- a/WhereToPlay/app/src/main/res/layout/fragment_referrals.xml
+++ b/WhereToPlay/app/src/main/res/layout/fragment_referrals.xml
@@ -84,7 +84,7 @@
                         android:layout_marginLeft="@dimen/margin_10"
                         android:layout_toRightOf="@+id/civ_referral_mine_header"
                         android:text="JoJo"
-                        android:textColor="@color/text_black"
+                        android:textColor="@color/text_red"
                         android:textSize="@dimen/normal_textsize" />
                 </RelativeLayout>
 
