--- a/WhereToPlay/app/src/main/res/layout/item_integral_detail.xml
+++ b/WhereToPlay/app/src/main/res/layout/item_integral_detail.xml
@@ -33,6 +33,7 @@
 
     <LinearLayout
         android:layout_width="wrap_content"
+
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
@@ -40,7 +41,7 @@
 
         <TextView
             android:id="@+id/tv_item_integral_no"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginRight="8dp"
             android:gravity="right"
@@ -49,11 +50,11 @@
 
         <TextView
             android:id="@+id/tv_time"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginRight="8dp"
             android:gravity="right"
-            android:textColor="#c4483c"
+            android:textColor="#FFCCCCCC"
             android:textSize="12sp" />
 
     </LinearLayout>
