--- a/WhereToPlay/app/src/main/res/layout/extendadapter.xml
+++ b/WhereToPlay/app/src/main/res/layout/extendadapter.xml
@@ -35,7 +35,7 @@
         android:layout_marginLeft="8dp"
         android:layout_toRightOf="@id/iv"
         android:gravity="bottom"
-        android:textColor="#ff333333"
+        android:textColor="#C4483C"
         android:textSize="15sp"
         tools:text="¥ 2580" />
 
