--- a/WhereToPlay/app/src/main/res/layout/extendfragment.xml
+++ b/WhereToPlay/app/src/main/res/layout/extendfragment.xml
@@ -1,36 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:layout_height="match_parent">
+
+    <LinearLayout
+        android:id="@+id/ll00"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/tv_title00"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_margin="12dp"
+            android:drawableLeft="@drawable/tao"
+            android:drawablePadding="8dp"
+            android:textColor="#ff333333"
+            tools:text="套餐（5）" />
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/line_height"
+            android:background="@color/pay_reserve_list_divider_white" />
+        <GridView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"></GridView>
+
+
+    </LinearLayout>
 
     <TextView
+        android:layout_below="@id/ll00"
         android:id="@+id/tv_title"
         android:layout_width="match_parent"
-        android:drawableLeft="@drawable/tao"
-        tools:text="套餐（5）"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
         android:layout_margin="12dp"
+        android:drawableLeft="@drawable/tao"
         android:drawablePadding="8dp"
         android:textColor="#ff333333"
-        android:layout_centerHorizontal="true"
-        android:layout_height="wrap_content" />
+        tools:text="套餐（5）" />
 
     <android.support.v7.widget.RecyclerView
-        android:layout_below="@+id/tv_title"
-        android:layout_width="match_parent"
         android:id="@+id/recycle"
-        android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tv_title"></android.support.v7.widget.RecyclerView>
 
     <TextView
         android:id="@+id/tv_more"
-        android:padding="16dp"
-        android:textSize="15dp"
-       android:gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_below="@id/recycle"
+        android:gravity="center"
+        android:padding="16dp"
         android:text="更多2个套餐"
         android:textColor="#ff333333"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:textSize="15dp" />
 
 
 </RelativeLayout>
