--- a/WhereToPlay/app/src/main/res/layout/activity_evaluation_success.xml
+++ b/WhereToPlay/app/src/main/res/layout/activity_evaluation_success.xml
@@ -76,6 +76,7 @@
                     android:orientation="vertical">
 
                     <TextView
+                        android:id="@+id/tv001"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="left"
@@ -84,10 +85,11 @@
                         android:textSize="14dp" />
 
                     <TextView
+                        android:id="@+id/tv002"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="left"
-                        android:text="你的评价将是其他用户选择的重要参考！"
+                        android:text="你的评价将是其他用户选择的重要参考!"
                         android:textColor="#666666"
                         android:textSize="12dp" />
 
