--- a/WhereToPlay/app/src/main/res/layout/extendadapter.xml
+++ b/WhereToPlay/app/src/main/res/layout/extendadapter.xml
@@ -3,15 +3,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
 
-    android:layout_height="100dp">
+    android:layout_height="80dp">
 
 
     <ImageView
         android:id="@+id/iv"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:layout_centerVertical="true"
-        android:layout_margin="15dp"
+        android:layout_margin="10dp"
         android:scaleType="fitXY"
         android:src="@mipmap/ic_launcher" />
 
@@ -48,7 +48,7 @@
         android:layout_marginLeft="12dp"
         android:layout_toRightOf="@id/tv2"
         android:gravity="bottom"
-        android:textColor="#ff333333"
+        android:textColor="#999999"
         android:textSize="15sp"
         tools:text="¥ 2888" />
 
