--- a/WhereToPlay/app/src/main/res/layout/extendfragment.xml
+++ b/WhereToPlay/app/src/main/res/layout/extendfragment.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="#FFFFFF"
     android:layout_height="match_parent">
 
     <LinearLayout
@@ -57,7 +58,7 @@
         android:layout_below="@id/recycle"
         android:gravity="center"
         android:padding="16dp"
-        android:text="更多2个套餐"
+        tools:text="更多2个套餐"
         android:textColor="#ff333333"
         android:textSize="15dp" />
 
