--- a/WhereToPlay/app/src/main/res/layout/item_reserve2.xml
+++ b/WhereToPlay/app/src/main/res/layout/item_reserve2.xml
@@ -1,100 +1,102 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:paddingBottom="@dimen/margin_5">
 
-        <ImageView
-            android:id="@+id/iv_reserve_item"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/height_150"
-            android:scaleType="fitXY"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+    <ImageView
+        android:id="@+id/iv_reserve_item"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/height_150"
+        android:scaleType="fitXY"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <ImageView
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:background="@drawable/shape_white_reserve_bottom"
-            app:layout_constraintBottom_toBottomOf="@+id/tv_reserve_item_address"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/iv_reserve_item" />
+    <ImageView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@drawable/shape_white_reserve_bottom"
+
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/iv_reserve_item" />
 
 
+    <TextView
+        android:id="@+id/tv_reserve_item_discount_sum"
+        android:layout_width="@dimen/width_70"
+        android:layout_height="@dimen/height_25"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="@dimen/margin_15"
+        android:layout_marginTop="@dimen/margin_15"
+        android:background="@drawable/discount"
+        android:gravity="center_vertical"
+        android:paddingLeft="@dimen/padding_25"
+        android:textColor="@color/textcolor_normal"
+        android:textSize="@dimen/textsize_level4"
+        app:layout_constraintRight_toRightOf="@+id/iv_reserve_item"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/iv_reserve_item">
 
 
         <TextView
-            android:id="@+id/tv_reserve_item_discount_sum"
-            android:layout_width="@dimen/width_70"
-            android:layout_height="@dimen/height_25"
-            android:layout_marginRight="@dimen/margin_15"
-            android:layout_marginTop="@dimen/margin_15"
-            android:background="@drawable/discount"
-            android:gravity="center_vertical"
-            android:paddingLeft="@dimen/padding_25"
-            android:textColor="@color/textcolor_normal"
-            android:textSize="@dimen/textsize_level4"
-            app:layout_constraintRight_toRightOf="@+id/iv_reserve_item"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:id="@+id/tv_reserve_item_address"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="@dimen/margin_8"
+            android:drawableLeft="@drawable/reserve_address"
+            android:drawablePadding="@dimen/padding_5"
+            tools:text="1212121"
+            android:paddingBottom="@dimen/margin_10"
+            android:textSize="@dimen/textsize_levelsmall" />
 
         <TextView
             android:id="@+id/tv_reserve_item_distance"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/margin_10"
+            android:layout_toLeftOf="@+id/tv_reserve_item_address"
             android:textColor="@color/textcolor_3b"
-            android:textSize="@dimen/textsize_levelsmall"
-            app:layout_constraintBaseline_toBaselineOf="@+id/tv_reserve_item_address"
-            app:layout_constraintStart_toEndOf="@+id/tv_reserve_item_address"
-            app:layout_constraintTop_toBottomOf="@+id/iv_reserve_item" />
+            android:textSize="@dimen/textsize_levelsmall" />
 
         <TextView
             android:id="@+id/tv_reserve_item_rise"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginBottom="@dimen/padding_3"
+            android:layout_marginRight="8dp"
+            android:paddingBottom="@dimen/margin_7"
             android:text="@string/rise"
             android:textColor="@color/text_black"
             android:textSize="@dimen/textsize_levelsmall"
-            android:paddingBottom="@dimen/margin_7"
-            android:layout_marginBottom="@dimen/padding_3"
-            app:layout_constraintBottom_toBottomOf="@id/tv_reserve_item_price"
-            app:layout_constraintEnd_toEndOf="@+id/tv_reserve_item_discount_sum"
-             />
+
+            />
 
         <TextView
             android:id="@+id/tv_reserve_item_price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-
+            android:layout_marginBottom="@dimen/padding_3"
+            android:layout_toLeftOf="@+id/tv_reserve_item_rise"
+            android:paddingBottom="@dimen/margin_7"
             android:textColor="@color/text_black"
             android:textSize="@dimen/textsize_level4"
-            android:paddingBottom="@dimen/margin_7"
-            android:layout_marginBottom="@dimen/padding_3"
-            app:layout_constraintEnd_toStartOf="@+id/tv_reserve_item_rise"
-            app:layout_constraintTop_toBottomOf="@id/iv_reserve_item"
-          /><!--   app:layout_constraintVertical_bias="0.1"-->
-
-        <TextView
-            android:id="@+id/tv_reserve_item_address"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_8"
-            android:drawableLeft="@drawable/reserve_address"
-            android:drawablePadding="@dimen/padding_5"
-            android:paddingBottom="@dimen/margin_10"
 
 
-            android:textSize="@dimen/textsize_levelsmall"
-            app:layout_constraintBottom_toBottomOf="@+id/tv_reserve_item_rise"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.025"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/iv_reserve_item"
-            /><!--app:layout_constraintVertical_bias="0.217" -->
+            /><!--   app:layout_constraintVertical_bias="0.1"-->
+    </RelativeLayout>
 
-    </android.support.constraint.ConstraintLayout>
+
+</RelativeLayout>
 
